fix: fix foto link

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
     <header>
-        <img src="images/foto_for_CV.jpg" alt="foto for CV">
+        <img src="foto_for_CV.jpg" alt="foto for CV">
         <ul>
 			<li><strong>Olga Artemeva</strong></li>
             <li>02/01/1983</li>
