--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
         <p><a href="https://olgaforestart.github.io/rsschool-cv/cv">CV-Project in RSSchool</a></p>
         <h2 id="code">Code example</h2>
 	<code>
-		function multiply(a, b){
-			a * b
+		function multiply(a, b){<br>
+			<span>var c = a * b;</span><br>
+			<span>retorn c;</span><br>
 		}
 	</code>
         <h2 id="languages">Languages</h2>
